--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h5{
 
 /* **** Header **** */
 
-header.header-flex{
+header{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -138,7 +138,7 @@ header .title .min-size{
 .menu-list a{
     display: block;
     color: #000;
-    font-size: calc(3rem + 3vw);
+    font-size: calc(2.5rem + 3vw);
     text-align: center;
     padding: 1.5rem;
 }
@@ -156,10 +156,15 @@ header .title .min-size{
     background-size: cover;
     right: -100vw;
     width: 100vw;
-    transition: right 1s ease;
+    transition: 1s ease;
+    /*right: 0;
+    width: 0;*/
+    /*modifier menu en ul li et display flex...*/
 }
 .menu-list-active{
     right: 0;
+    /*width: 100vw*/
+    
 }
 @media screen and (min-width:1000px){
     header .logo{
@@ -223,6 +228,7 @@ section.search{
 .bubble-position{
     position: relative;
     top: 15vh;
+
 }
 .search img:first-of-type{
     display: block;
@@ -234,6 +240,7 @@ section.search{
     width: 3.5rem;
     height: 3.5rem;
     cursor: pointer;
+    margin: 0 auto;
 }
 
 
@@ -272,7 +279,7 @@ footer{
 footer p{
     margin-left: 2rem;
     color: var(--main-font-color);
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 
 }
 footer .social-link ul{
@@ -421,7 +428,7 @@ section p.diver, section p.teacher{
 }
 .tab-content, .tab-content-ens{
     background-color: var(--bg-color-tabs-level-active);
-    padding: 2rem 3rem;
+    padding: 2rem 1rem;
     margin-bottom: 6rem;
 }
 .tab-content p, .tab-content-ens p{
@@ -502,7 +509,7 @@ section p.diver, section p.teacher{
     transition: max-height 0.7s ease-in-out;
 }
 .visible{
-    max-height: 55vh;
+    max-height: 100vh;
 }
 .invisible-content img{
     max-width: 100%;
@@ -514,7 +521,7 @@ section p.diver, section p.teacher{
 }
 .equipment .line{
     width: 70%;
-    margin: 0 auto;
+    margin: 1rem auto;
     height: 0.3rem;
     background: var(--main-gradient);
     border-radius: 0.2rem;
