--- a/style.css
+++ b/style.css
@@ -27,14 +27,14 @@
 
 html{
     font-size: 62.5%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 body{
     min-height: 100vh;
     margin: 0 auto;
     background-color: #e0dddd;
     font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 p{
     color: #202238;
@@ -78,17 +78,15 @@ header{
     justify-content: space-between;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.8); 
-    background-size: cover;
     position: fixed;
     z-index: 100;
     width: 100%;
     top: 0;
-    right:0;
     left:0;
 }
-    header.sticky-mode{
-    position: sticky; 
-}
+ header.sticky-mode{
+    position: sticky;
+}  
 header .logo{
     display: block;
     width: calc(4rem + 3vw);
@@ -142,7 +140,7 @@ header .title .min-size{
 }
 .menu-list a{
     display: block;
-    color: #000;
+    color: #fff;
     font-size: calc(2.5rem + 3vw);
     text-align: center;
     padding: 1.5rem;
@@ -151,20 +149,24 @@ header .title .min-size{
     border-bottom: none;
 }
 .menu-list{
-    display: flex;
+    display: flex; 
+    overflow: hidden;
+    height: 0;
     flex-direction: column;
     justify-content: space-around;
     position: absolute;
     top: calc(4rem + 3vw);
-    background-image: url("medias/menuburger.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    right: -100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    /*background-image: url("medias/menuburger.jpg");*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: cover;*/
+    left: 0;
     width: 100%;
-    transition: 1s ease;
+    transition: all 1s ease;
 }
 .menu-list-active{
-    right: 0;    
+    /*left: 0;*/
+    height: 30rem; 
 }
 @media screen and (min-width:1000px){
     header .logo{
@@ -179,7 +181,10 @@ header .title .min-size{
         position: initial;
         background: transparent;
         justify-content: space-between;
+        overflow: initial;
         width: auto;
+        height: auto;
+        
     }
     .menu-list a{
         font-size: 2rem;
@@ -270,6 +275,8 @@ main{
 
 footer{
     display: flex;
+    position: sticky;
+    top: 100vh;
     justify-content: space-between;
     align-items: center;
     font-size: 1.4rem;
