--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header .title .min-size{
 }
 .menu-list a{
     display: block;
-    color: #000;
+    color: var(--main-font-color);
     font-size: calc(2.5rem + 3vw);
     text-align: center;
     padding: 1.5rem;
@@ -177,10 +177,10 @@ header .title .min-size{
         justify-content: space-between;
         overflow: initial;
         width: auto;
-        height: auto;
-        
+        height: auto;     
     }
     .menu-list a{
+        color: #000;
         font-size: 2rem;
         padding: 0 0.7rem;
         margin-right: 1rem;
@@ -227,7 +227,6 @@ section.search{
 .bubble-position{
     position: relative;
     top: 15vh;
-
 }
 .search img:first-of-type{
     display: block;
@@ -281,7 +280,6 @@ footer p{
     margin-left: 2rem;
     color: var(--main-font-color);
     font-size: 1.2rem;
-
 }
 footer .social-link ul{
     display: flex;
@@ -367,7 +365,6 @@ nav .sub-menu-list:hover{
         flex-direction: column;
         align-items: center;
     }
-
     .presentation .content{
         flex-direction: initial;
         justify-content: center;
